# coxnet

./: .clang-format  .gitignore  CMakeLists.txt  README.md  coxnet.h
coxnet/: buffer.h  cleaner.h  coxnet.h  io_def.h  poller.h  poller_linux.h  poller_mac.h  poller_windows.h  socket.h
samples/client/: CMakeLists.txt  client.cpp
samples/my_client/: CMakeLists.txt  main.cpp
samples/my_server/: CMakeLists.txt  main.cpp
samples/server/: CMakeLists.txt  server.cpp
src/: buffer.h  co_type.h  io_def.h  poller.h  socket.h
test/: CMakeLists.txt
test/test_buffer/: test_buffer.cpp
test/test_server/: main.cpp
